# knodel

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  demo.tidal  mypy.ini  pyproject.toml  pytest.ini
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  copilot-setup.yml  setup.yml
docs/: index.md
docs/contributing/: CONTRIBUTING.md
docs/development/: releasing.md  testing.md
docs/guides/: installation.md  quickstart.md
docs/security/: SECURITY.md
examples/: basic_session.py  bpm_config_session.py
src/knodel/: __init__.py  __main__.py  base.py  patterns.py  session.py  synths.py  transpiler.py
src/py_tidal/: __init__.py  __main__.py  base.py  patterns.py  session.py  synths.py  transpiler.py
tests/: conftest.py  test_build_integrity.py  test_session_config.py  test_transpiler.py
